--- a/projects.json
+++ b/projects.json
@@ -4,7 +4,7 @@
       "id": "escd",
       "title": "Eurovision Song Contest Design Generator 2025",
       "creator": "Léo Tosku",
-      "category": "commission", 
+      "category": "personal-project", 
       "path": "ESCDesignGenerator/2025",
       "noPhone": true
     },
