--- a/projects.json
+++ b/projects.json
@@ -10,7 +10,7 @@
     },
     {
       "id": "azhr",
-      "title": "Azahar n3DS Emulator",
+      "title": "Azahar n3DS Emulator (Redesign)",
       "creator": "PabloMK7 & Opensauce",
       "category": "commission", 
       "path": "Azahar",
@@ -18,7 +18,7 @@
     },
     {
       "id": "cemu",
-      "title": "Cemu WiiU Emulator",
+      "title": "Cemu WiiU Emulator (Redesign)",
       "creator": "Exzap",
       "category": "commission",
       "path": "Cemu",
