--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,14 @@
 {
   "projects": [
     {
+      "id": "sand",
+      "title": "SandFall Interactive (Redesign)",
+      "creator": "SandFall Interactive",
+      "category": "commission", 
+      "path": "SandFall",
+      "noPhone": true
+    },
+    {
       "id": "escd",
       "title": "Eurovision Song Contest Design Generator 2025",
       "creator": "Léo Tosku",
