--- a/projects.json
+++ b/projects.json
@@ -68,7 +68,7 @@
       "id": "smag",
       "title": "Super Mario Another Galaxy",
       "creator": "SMAG Team",
-      "category": "commission",
+      "category": "personal-project",
       "path": "smag",
       "noPhone": false
     }
